<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/disclaimer_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textColor="#000"
            android:text="@string/tv_license"/>

        <CheckBox
            android:id="@+id/cb_accept"
            android:checked="false"
            android:text="@string/cb_accept"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent" />

        <Button
            android:id="@+id/disclaimer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_ok"
            android:layout_gravity="center" />

</LinearLayout>