<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/session_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:padding="10dp">

        <ImageView
            android:id="@+id/session_item_image"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/cookie" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/session_item_url_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/session_item_url_lbl"/>

                <TextView
                    android:id="@+id/session_item_domain"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="15sp"
                    android:gravity="start"
                    android:textStyle="italic"
                    android:text="@string/session_item_domain_text"
                    android:paddingLeft="5dp"
                    android:paddingRight="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/session_item_ip_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="IP: "/>

                <TextView
                    android:id="@+id/session_item_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/session_item_ip" />

                <TextView
                    android:id="@+id/session_item_id_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:text="HC: "
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp" />

                <TextView
                    android:id="@+id/session_item_id"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/session_item_id"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/session_item_type_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_weight="0"
                    android:paddingStart="0dp"
                    android:paddingEnd="5dp"
                    android:text="@string/session_item_type_lbl"
                    android:paddingLeft="0dp"
                    android:paddingRight="5dp" />

                <TextView
                    android:id="@+id/session_item_type"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:gravity="start"
                    android:text="@string/session_item_type_generic"/>

                <ImageView
                    android:id="@+id/session_item_saved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_save_black_24dp"/>

                <ImageButton
                    android:id="@+id/session_item_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_more_vert_black_24dp"
                    android:background="@null"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>